2007-12-17  Andy Wingo  <wingo@pobox.com>

	* gst/switch/gstswitch.c (gst_selector_pad_chain): Return OK when
	a buffer is ignored, not NOT_LINKED. No sense in making a source
	element error out; at least fdsrc considers NOT_LINKED to be a
	fatal error. Patch 11/12. There is no patch 12/12. Foo.

	* gst/switch/gstswitch-marshal.list:
	* gst/switch/gstswitch.h (struct _GstStreamSelectorClass): 
	* gst/switch/gstswitch.c (gst_stream_selector_class_init)
	(gst_stream_selector_block): Make the block() signal return the
	last stop time of the active pad. Patch 10/12.

	* gst/switch/gstswitch.c (gst_selector_pad_get_property)
	(gst_selector_pad_class_init, gst_stream_selector_class_init)
	(gst_stream_selector_get_property): Expose 'last-stop-time' as a
	pad property, not an element property.
	(gst_selector_pad_chain): Mark the last_stop time as timestamp +
	duration, not timestamp. Patch 9/12.

	* gst/switch/gstswitch.c (gst_stream_selector_change_state)
	(gst_stream_selector_block, gst_stream_selector_switch): Use the
	cond mechanism instead of blocked pads. Patch 8/12.

	* gst/switch/gstswitch.h (struct _GstStreamSelector): 

	* gst/switch/gstswitch.c (gst_stream_selector_wait)
	(gst_selector_pad_chain, gst_stream_selector_init)
	(gst_stream_selector_dispose): Add infrastructure for new blocking
	mechanism that does not use gst_pad_set_blocked, which does not
	work on sink pads. Patch 7/12.

	* gst/switch/gstswitch.c (gst_stream_selector_class_init)
	(gst_stream_selector_get_property): Add last-stop-time readable
	property. Patch 6/12.

	* gst/switch/gstswitch.h (struct _GstStreamSelector): Add some
	state variables.

	* gst/switch/gstswitch.c (gst_stream_selector_push_pending_stop)
	(gst_selector_pad_chain): Push any pending stop event.
	(gst_stream_selector_set_active_pad)
	(gst_stream_selector_set_property): Factor out setting the active
	pad to a function. Close the segment of the previous active pad if
	told to do so via a stop_time != GST_CLOCK_TIME_NONE.